--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,2 +1,8 @@
-add_executable(test sample1_unittest.cc)
-target_link_libraries(test liblest)
+function(add_sample name)
+  add_executable(${name} ${name}.cc)
+  target_link_libraries(${name} liblest)
+    
+endfunction(add_sample name)
+
+add_sample(sample1_unittest)
+add_sample(sample2_unittest)
