--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(liblest 
             lest.cc
             lest-internal.cc
+            lest-unittest.cc
+			lest-compare.cc
             lest-assert.cc
             lest-testing.cc)
