--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ include_directories(src)
 add_subdirectory(src)
 add_subdirectory(sample)
 # add_subdirectory(tests)
-# add_subdirectory(playground)
+add_subdirectory(playground)
