Add test and enable share.

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -9,3 +9,4 @@ add_sample(sample1_unittest)
 add_sample(sample2_unittest)
 add_sample(sample3_unittest)
 add_sample(sample4_unittest)
+add_sample(sample5_unittest)
