--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,11 @@ include_directories(src)
 # add generate option 
 option(LEST_GENERATE_REPORT "Generate report" ON)
 if (LEST_GENERATE_REPORT)
+    add_definitions(-DLEST_GEN)
     find_package(LibXml2 REQUIRED)
     include_directories(${LIBXML2_INCLUDE_DIRS})
     link_directories(${LIBXML2_LIBRARY_DIRS})
     add_definitions(-DLEST_GENERATE_REPORT)
-
 endif()
 
 add_subdirectory(src)
