Write dogfood test.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,6 @@
-add_executable(test test-assert-manual.cc)
-target_link_libraries(test liblest)
+function(add_lest_test TARGET SOURCE)
+    add_executable(${TARGET} ${SOURCE})
+    target_link_libraries(${TARGET} liblest)
+endfunction(add_lest_test)
+
+add_lest_test(test-assert test-assert.cc)
