--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,5 @@ endif()
 
 add_subdirectory(src)
 add_subdirectory(sample)
-# add_subdirectory(tests)
+add_subdirectory(tests)
 add_subdirectory(playground)
