--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,14 @@ if (LEST_GENERATE_REPORT)
     add_definitions(-DLEST_GENERATE_REPORT)
 endif()
 
+function(add_lest_test TARGET SOURCE)
+    add_executable(${TARGET} ${SOURCE})
+    target_link_libraries(${TARGET} liblest)
+endfunction(add_lest_test)
+
 add_subdirectory(src)
 add_subdirectory(sample)
 add_subdirectory(tests)
 add_subdirectory(playground)
+add_subdirectory(live_demo)
+add_subdirectory(benchmark)
