--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,10 +3,11 @@ add_library(liblest SHARED
             lest.cc
             lest-assert.cc
 			lest-compare.cc
-			lest-log.cc
-            lest-internal.cc
             lest-generator.cc
+            lest-internal.cc
+			lest-log.cc
             lest-result.cc
+            lest-utils.cc
             lest-testing.cc)
 
 if(LEST_GENERATE_REPORT)
