--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,5 +27,5 @@ add_subdirectory(src)
 add_subdirectory(sample)
 add_subdirectory(tests)
 add_subdirectory(playground)
-add_subdirectory(live_demo)
+# add_subdirectory(live_demo)
 add_subdirectory(benchmark)
