--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -10,3 +10,4 @@ add_sample(sample3_unittest)
 add_sample(sample4_unittest)
 add_sample(sample5_unittest)
 add_sample(sample6_unittest)
+add_sample(sample7_unittest)
