Add expect test.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,8 @@
 
-add_lest_test(test-assert-eq test-assert-eq.cc)
+add_lest_test(test-expect-eq test-expect-eq.cc)
+add_lest_test(test-expect-ne test-expect-ne.cc)
+add_lest_test(test-expect-le test-expect-le.cc)
+add_lest_test(test-expect-lt test-expect-lt.cc)
+add_lest_test(test-expect-ge test-expect-ge.cc)
+add_lest_test(test-expect-gt test-expect-gt.cc)
 add_lest_test(test-fp test-fp.cc)
