--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,5 @@ add_lest_test(test-expect-lt test-expect-lt.cc)
 add_lest_test(test-expect-ge test-expect-ge.cc)
 add_lest_test(test-expect-gt test-expect-gt.cc)
 add_lest_test(test-fp test-fp.cc)
+add_lest_test(test-colorful-log test-colorful-log.cc)
+add_lest_test(test-fixture test-fixture.cc)
