--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,14 @@ add_lest_test(test-expect-le test-expect-le.cc)
 add_lest_test(test-expect-lt test-expect-lt.cc)
 add_lest_test(test-expect-ge test-expect-ge.cc)
 add_lest_test(test-expect-gt test-expect-gt.cc)
+
+add_lest_test(test-assert-eq test-assert-eq.cc)
+add_lest_test(test-assert-ne test-assert-ne.cc)
+add_lest_test(test-assert-le test-assert-le.cc)
+add_lest_test(test-assert-lt test-assert-lt.cc)
+add_lest_test(test-assert-ge test-assert-ge.cc)
+add_lest_test(test-assert-gt test-assert-gt.cc)
+
 add_lest_test(test-fp test-fp.cc)
 add_lest_test(test-colorful-log test-colorful-log.cc)
 add_lest_test(test-fixture test-fixture.cc)
